[package]
name = "ellipticoin-test-framework"
version = "0.1.2"
authors = ["Mason Fischer <mason@kissr.co>"]
description = "A framework for testing Ellipticoin smart contracts"
license = "MIT"

[dependencies]
wasm-rpc = "0.2.11"
ellipticoin = "0.1.4"
secp256k1 = {version = "0.12.2", features = ["rand"]}
rand = "0.4"
hex = "0.3.2"
lazy_static = "1.1.0"
