[package]
name = "ellipticoin-test-framework"
version = "0.1.3"
authors = ["Mason Fischer <mason@kissr.co>"]
description = "A framework for testing Ellipticoin smart contracts"
license = "MIT"

[dependencies]
wasm-rpc = "0.2.11"
ellipticoin = "0.1.4"
secp256k1 = {version = "0.17.2", features = ["rand"]}
sha2 = "0.8.1"
rand = "0.6.5"
hex = "0.3.2"
lazy_static = "1.1.0"
